--- a/index.html
+++ b/index.html
@@ -24,14 +24,43 @@
     <h1>
         Welcome To Solo!
     </h1>
-    <p id="main">This is paragraph</p>
-    <div>
-        <p class="content">This is paragraph inside div</p>
-        <p class="content">This is paragraph2 inside div</p>
+    <h3>BS Grid System</h3>
+    <h3>1 Column</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 col-bg-red">
+                Content 1
+            </div>
+        </div>
+    </div>
+
+    <h3>2 Column</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-bg-red">
+                Content 1
+            </div>
+            <div class="col-md-6 col-bg-pink">
+                Content 2
+            </div>
+        </div>
+    </div>
+    <h3>3 Column</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-bg-red">
+                Content 1
+            </div>
+            <div class="col-md-4 col-bg-pink">
+                Content 2
+            </div>
+            <div class="col-md-4 col-bg-blue">
+                Content 3
+            </div>
+        </div>
     </div>
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap JS -->
     <script src="js/bootstrap/bootstrap.js"></script>
     <!-- Custom JS-->
