--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="image/favicon/favicon.ico">
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/boostrap/bootstrap.css">
 
@@ -18,47 +25,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <!-- Example Markup -->
-
-    <h1>
-        Welcome To Solo!
-    </h1>
-    <h3>BS Grid System</h3>
-    <h3>1 Column</h3>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 col-bg-red">
-                Content 1
-            </div>
-        </div>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div id="status">&nbsp;</div>
     </div>
 
-    <h3>2 Column</h3>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-bg-red">
-                Content 1
-            </div>
-            <div class="col-md-6 col-bg-pink">
-                Content 2
-            </div>
-        </div>
-    </div>
-    <h3>3 Column</h3>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-bg-red">
-                Content 1
-            </div>
-            <div class="col-md-4 col-bg-pink">
-                Content 2
-            </div>
-            <div class="col-md-4 col-bg-blue">
-                Content 3
-            </div>
-        </div>
-    </div>
+    <!-- Home -->
+    <section id="home">
+        <!-- Background Video -->
+        <video id="home-bg-video" poster="video/solo.jpg" autoplay loop muted>
+            <source src="video/solo.mp4" type="video/mp4">
+            <source src="video/solo.ogv" type="video/ogg">
+            <source src="video/solo.webm" type="video/webm">
+        </video>
+    </section>
+
+
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <!-- Bootstrap JS -->
