--- a/index.html
+++ b/index.html
@@ -38,6 +38,58 @@
             <source src="video/solo.ogv" type="video/ogg">
             <source src="video/solo.webm" type="video/webm">
         </video>
+
+        <!-- Overlay -->
+        <div id="home-overlay"></div>
+
+        <!-- Home Content -->
+        <div id="home-content">
+            <div id="home-content-inner" class="text-center">
+                <div id="home-heading">
+                    <h1 id="home-heading-1">Digital</h1><br>
+                    <h1 id="home-heading-2">Creative <span>Agency</span></h1>
+                </div>
+                <div id="home-text">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae eligendi quae amet tempora voluptatibus voluptate cum officiis laboriosam illum vitae provident, esse, nam voluptatem error numquam reprehenderit exercitationem cupiditate cumque?</p>
+                </div>
+                <div id="home-btn">
+                    <a class="btn btn-general btn-home" href="#about" title="Start Now" role="button">Start Nows</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Arrow Down -->
+        <a href="#about" id="arrow-down">
+            <i class="fa fa-angle-down"></i>
+        </a>
+    </section>
+    <!-- Home End -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- Temporary Space -->
+    <section>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </section>
 
 
