--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <h1 id="home-heading-2">Creative <span>Agency</span></h1>
                 </div>
                 <div id="home-text">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae eligendi quae amet tempora voluptatibus voluptate cum officiis laboriosam illum vitae provident, esse, nam voluptatem error numquam reprehenderit exercitationem cupiditate cumque?</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae eligendi quae amet tempora volup?</p>
                 </div>
                 <div id="home-btn">
                     <a class="btn btn-general btn-home" href="#about" title="Start Now" role="button">Start Nows</a>
@@ -64,6 +64,126 @@
         </a>
     </section>
     <!-- Home End -->
+
+    <!-- About -->
+    <section id="about">
+        <!-- About 01 -->
+        <div id="about-01">
+            <div class="content-box-lg">
+                <div class="container">
+                    <div class="row">
+                        <!-- About Left Side -->
+                        <div class="col-md-6">
+                            <div id="about-left">
+                                <div class="vertical-heading">
+                                    <h5>Who We Are</h5>
+                                    <h2>A <strong>Story</strong><br>About Us</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- About Right Side -->
+                        <div class="col-md-6">
+                            <div id="about-right">
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, delectus similique doloremque perspiciatis numquam corrupti blanditiis nostrum? Sunt, asperiores dolorum nemo tempora provident vel odio dolore. Officia nemo accusantium eaque?</p>
+
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo, delectus similique doloremque perspiciatis numquam corrupti blanditiis nostrum? Sunt, asperiores dolorum nemo tempora provident vel odio dolore. Officia nemo accusantium eaque?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- About Bottom -->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div id="about-bottom">
+                                <img src="image/about/about.png" alt="About Us" class="img-responsive">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
